--- a/src/DepotVente/BourseBundle/Resources/views/Home/index.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Home/index.html.twig
@@ -1,26 +1,41 @@
 {% extends "BourseBundle::layout.html.twig" %}
 
-{% block title %} Demo Bundle {% endblock %}
+{% block title %} Accueil {% endblock %}
 
-{% block stylesheets %}
-<link rel="stylesheet" href="{{ asset("bundles/bourse/css/bootstrap.css") }}" />
-<link rel="stylesheet" href="{{ asset("bundles/bourse/css/style.css") }}" />
-<link href='http://fonts.googleapis.com/css?family=Faster+One' rel='stylesheet' type='text/css'>
-{% endblock %}
 
 {% block body %}
 
-<header>
-	<div id="title"> Depot Vente </div>
-	<nav>
-		<ul class="menu-list">
-			<li class="menu-item"> <a href="">Accueil</a> </li>
-			<li class="menu-item"> <a href="">Depot</a> </li>
-			<li class="menu-item"> <a href="">Vente</a> </li>
-			<li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Connexion</a></li>
-		</ul>
-	</nav>
-</header>
+<section id="intro" class="wrap">
+	Bienvenue sur la bourse en ligne !
+</section>
+
+<section class="article">
+	<div class="wrap">
+		<h1>
+			Un petit article
+		</h1>
+	</div>
+</section>
+
+<section class="article">
+	<div class="wrap">
+		<h1>
+			Un petit article
+		</h1>
+	</div>
+</section>
+
+<section class="article">
+	<div class="wrap">
+		<h1>
+			Un petit article
+		</h1>
+	</div>
+</section>
+
+
+	
+
 
 
 {% endblock %}
