--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -4,12 +4,32 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name ="author" content="MARTIN Franck Belluco Luca" />
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        <link rel="stylesheet" href="{{ asset("bundles/bourse/css/bootstrap.css") }}" />
+        <link rel="stylesheet" href="{{ asset("bundles/bourse/css/style.css") }}" />
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         <!--[if lt IE 9]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
     </head>
     <body>
+        <header>
+            <div id="title"> <a href="">Depot Vente</a> </div>
+            <nav>
+                <ul class="menu-list">
+                    <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
+                    <li class="menu-item"> <a href="{{ path('bourse_depotpage') }}">Depot</a> </li>
+                    <li class="menu-item"> <a href="">Vente</a> </li>
+                    <li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Connexion</a></li>
+                </ul>
+            </nav>
+        </header>
         {% block body %}{% endblock %}
+        <footer>   
+                
+                    DepotVente <br />
+                    Martin Franck - Belluco Luca
+               
+        </footer>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
