--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
                 <ul class="menu-list">
                     <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
                     <li class="menu-item"> <a href="{{ path('bourse_depotpage') }}">Depot</a> </li>
-                    <li class="menu-item"> <a href="">Vente</a> </li>
+                    <li class="menu-item"> <a href="{{ path('bourse_boursepage') }}">Bourses</a> </li>
                     <li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Connexion</a></li>
                 </ul>
             </nav>
