Legere modif css

--- a/src/DepotVente/BourseBundle/Resources/views/Depot/depot.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Depot/depot.html.twig
@@ -7,7 +7,7 @@
 
 
 
-<div id="content">
+<section class="article">
 
 	<div class="wrap ">
 		<h1>
@@ -15,7 +15,7 @@
 		</h1>
 	</div>
 
-</div>
+</section>
 
 
 
