--- a/src/DepotVente/BourseBundle/Resources/public/css/style.css
+++ b/src/DepotVente/BourseBundle/Resources/public/css/style.css
@@ -16,6 +16,7 @@ header, footer{
 	position: fixed;
 	font-family: "Helvetica";
 	top: 0;
+	z-index:100;
 }
 
 
@@ -95,18 +96,16 @@ section.article{
 	padding: 50px 0;
 }
 
-.section{
-	min-height: 400px;
+section.content{
 	background: #FFF;
-	margin: 20px auto;
-	box-shadow: 0px 0px 15px #000;
-	border-radius: 5px
-}
-
-#content{
-	background: #FFF;
-	min-height: 400px;
+	min-height: 600px;
 	margin: 20px auto;
 	box-shadow: 0px 0px 15px #000;
 	width: 100%
+}
+
+@media screen and (max-width: 640px) {
+  .menu-list {
+    display:none;
+  }
 }
