--- a/src/DepotVente/BourseBundle/Resources/public/css/style.css
+++ b/src/DepotVente/BourseBundle/Resources/public/css/style.css
@@ -99,10 +99,12 @@ section.article{
 section.content{
 	background: #FFF;
 	min-height: 600px;
+	min-width: 1000px;
 	margin: 20px auto;
 	box-shadow: 0px 0px 15px #000;
 	width: 100%
 }
+
 
 @media screen and (max-width: 640px) {
   .menu-list {
