--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -1,5 +1,6 @@
 <!DOCTYPE html> 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name ="author" content="MARTIN Franck Belluco Luca" />
@@ -13,7 +14,7 @@
     </head>
     <body>
         <header>
-            <div id="title"> <a href="{{ path('bourse_homepage') }}">Depot Vente</a> </div>
+            <div id="title"> <a href="">Depot Vente</a> </div>
             <nav>
                 <ul class="menu-list">
                     <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
@@ -24,7 +25,13 @@
             </nav>
         </header>
         {% block body %}{% endblock %}
-
+        <footer>   
+                
+                    DepotVente <br />
+                    Martin Franck - Belluco Luca
+               
+        </footer>
         {% block javascripts %}{% endblock %}
     </body>
+
 </html>
