--- a/src/DepotVente/BourseBundle/Resources/public/css/style.css
+++ b/src/DepotVente/BourseBundle/Resources/public/css/style.css
@@ -32,7 +32,12 @@ footer{
 	padding: 10px
 }
 
-header #title a{
+header #title{
+	position: relative;
+	width: 135px;
+}
+
+header #title .home{
 	line-height: 65px;
 	font-size: 20px;
 	margin-left: 20px;
@@ -43,7 +48,7 @@ header #title a{
 	/*-webkit-transition: box-shadow 0.2s ease, height 3s linear;*/
 }
 
-header #title a:hover{
+header #title .home:hover{
 	box-shadow: 5px 0px 7px #000;
 	border: 2px solid #000;
 	text-decoration: none;
@@ -63,12 +68,38 @@ header nav{
 header nav ul li {
 	margin: 0 20px;
 	display: inline;
-} 
+}
 
 header a{
 	color: #FFF;
 }
 
+#menu-responsive{
+	position: absolute;
+	width: 135px;
+	left: 35px;
+	top: 66px;
+	box-shadow: 5px 5px 2px #000;
+	display: none
+}
+
+#menu-responsive ul{
+	list-style-type: none;
+	margin: 0
+}
+
+#menu-responsive li{
+	width: 135px;
+	height: 65px;
+	line-height: 65px;
+	font-size: 20px;
+	text-align: center;
+	background: #252525;
+}
+
+#menu-responsive li:hover{
+	background: #444;
+}
 
 #intro{
 	font-family: "Helvetica";
@@ -107,7 +138,11 @@ section.content{
 
 
 @media screen and (max-width: 640px) {
-  .menu-list {
+  nav .menu-list {
     display:none;
+  }
+
+  #title:hover #menu-responsive{
+	display: block;
   }
 }
