--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
 
     <head>
@@ -14,7 +14,17 @@
     </head>
     <body>
         <header>
-            <div id="title"> <a href="">Depot Vente</a> </div>
+            <div id="title">
+                <a class="home" href="">Depot Vente</a>
+                <div id="menu-responsive">
+                    <ul class="menu-list">
+                        <a href="{{ path('bourse_homepage') }}"> <li class="menu-item"> Accueil </li> </a>
+                        <a href="{{ path('bourse_depotpage') }}"> <li class="menu-item"> Dépôt </li> </a>
+                        <a href="{{ path('bourse_boursepage') }}"> <li class="menu-item"> Bourses </li> </a>
+                        <li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Connexion</a></li>
+                    </ul>
+                </div>
+            </div>
             <nav>
                 <ul class="menu-list">
                     <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
@@ -25,12 +35,7 @@
             </nav>
         </header>
         {% block body %}{% endblock %}
-        <footer>   
-                
-                    DepotVente <br />
-                    Martin Franck - Belluco Luca
-               
-        </footer>
+
         {% block javascripts %}{% endblock %}
     </body>
 
