--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/index.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/index.html.twig
@@ -11,10 +11,29 @@
 	<div class="wrap">
 		<fieldset>
 			<legend>Saisir l'ID d'un produit</legend>
-			<form class="form-search">
-				<input type="text" class="input">
-				<button type="submit" class="btn">Search</button>
+			<form class="form-search" method="get" action="{{ path('bourse_article') }}">
+				<input type="text" name="id" placeholder="Saisir le numéro d'identification" class="input">
+				<button type="submit" class="btn">Rechercher</button>
 			</form>
+		</fieldset>
+
+		<fieldset>
+			<legend>Afficher une liste d'article du dépot </legend>
+
+			<p>
+				 <a href="{{ path('bourse_all_article') }}"> <button type="submit" class="btn btn-primary">Tous les articles</button> </a>
+			</p>
+
+			<form class="form-search">
+				<input type="text" placeholder="Saisir un nom" class="input-medium">
+				<button type="submit" class="btn btn-inverse">Par nom</button>
+			</form>
+
+			<form class="form-search">
+				<input type="text" placeholder="Saisir un prix" class="input-medium">
+				<button type="submit" class="btn btn-inverse">Par prix</button>
+			</form>
+
 		</fieldset>
 	</div>
 
