--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/article.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/article.html.twig
@@ -25,12 +25,12 @@
 				<p> <span style="font-weight:bold"> Article : </span> {{article.name}} </p>
 				<p> <span style="font-weight:bold"> Prix de référence : </span> {{article.price}} €  </p>
 				<p> <span style="font-weight:bold"> Date de dépot : </span> {{article.dateDepot |date("d/m/Y") }} </p>
-				<div class="warning alert alert-error">Prix Total : {{article.price}} € </div>
+				<div class="warning alert alert-error">Prix Total : {{article.getTotalPrice}} € </div>
 			</div>
 
 			<div class="span5">
 				<h4>Description et informations</h4>
-				<div class="scrollable" style="height: 300px; overflow-y: auto"> {{article.description}}</div>
+				<div class="scrollable" style="height: 300px; overflow-y: auto"> {{article.description | nl2br }}</div>
 			</div>
 		</fieldset>
 
