--- a/src/DepotVente/BourseBundle/Resources/views/Depot/ajout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Depot/ajout.html.twig
@@ -10,7 +10,7 @@
 	<div class="wrap">
 
 		<fieldset>
-			<legend> Déposer un objet : </legend>
+			<legend> Enregister un nouvel objet  </legend>
 			<form class="form-vertical" method="post" {{ form_enctype(form) }}>
 
 				<div class="span4">
