--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/validation.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/validation.html.twig
@@ -1,6 +1,6 @@
 {% extends "BourseBundle::layout.html.twig" %}
 
-{% block title %} Depot {% endblock %}
+{% block title %} Article {{article.nro}} {% endblock %}
 
 
 {% block body %}
