--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/listArticle.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/listArticle.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-<section class="intro" class="wrap">
+<section class="intro wrap">
 	{{text}}  <a href="{{url}}"><button class="btn" type="button">Afficher la vue tableau</button></a>
 </section>
 
