--- a/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/layout.html.twig
@@ -21,16 +21,16 @@
                         <a href="{{ path('bourse_homepage') }}"> <li class="menu-item"> Accueil </li> </a>
                         <a href="{{ path('bourse_depotpage') }}"> <li class="menu-item"> Dépôt </li> </a>
                         <a href="{{ path('bourse_boursepage') }}"> <li class="menu-item"> Bourses </li> </a>
-                        <li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Tableau de bord</a></li>
+                        <li class="menu-item login-item"><a href="{{ path('bourse_tableauDeBord') }}" class="btn btn-inverse btn-mini">Tableau de bord</a></li>
                     </ul>
                 </div>
             </div>
             <nav>
                 <ul class="menu-list">
                     <li class="menu-item"> <a href="{{ path('bourse_homepage') }}">Accueil</a> </li>
-                    <li class="menu-item"> <a href="{{ path('bourse_depotpage') }}">Nouveau Dépôt</a> </li>
+                    <li class="menu-item"> <a href="{{ path('bourse_depotpage') }}"> Dépôt</a> </li>
                     <li class="menu-item"> <a href="{{ path('bourse_boursepage') }}">Votre Bourses</a> </li>
-                    <li class="menu-item login-item"><a href="" class="btn btn-inverse btn-mini">Tableau de bord</a></li>
+                    <li class="menu-item login-item"><a href="{{ path('bourse_tableauDeBord') }}" class="btn btn-inverse btn-mini">Tableau de bord</a></li>
                 </ul>
             </nav>
         </header>
