Premier page tableau de bord

--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/article.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/article.html.twig
@@ -40,7 +40,7 @@
 				<tbody>
 					<tr>
 						<td>Nro</td>
-						<td>{{article.user.id}}</td>
+						<td><a href="{{ path('bourse_deposant',{id: article.user.id}) }}">{{article.user.id}}</a></td>
 					</tr>
 					<tr>
 						<td>Nom</td>
