--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/listArticle.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/listArticle.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 
 <section class="intro wrap">
-	{{text}}  <a href="{{url}}"><button class="btn" type="button">Afficher la vue tableau</button></a>
+	{{text}}  <a href="{{ path('bourse_all_article' , {display : 'tableau' })}}"><button class="btn" type="button">Afficher la vue tableau</button></a>
 </section>
 
 {% for article  in listArticle %}
