--- a/src/DepotVente/BourseBundle/Resources/views/Bourse/validation.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Bourse/validation.html.twig
@@ -10,7 +10,7 @@
 
 	<div class="wrap">
 		<div class="alert">
-			<strong>Cette article n'est pas présent dans le dépôt</strong>
+			<strong>Cette article n'est plus présent dans le dépôt.</strong>
 		</div>
 
 		<p>
