--- a/src/DepotVente/BourseBundle/Resources/public/css/style.css
+++ b/src/DepotVente/BourseBundle/Resources/public/css/style.css
@@ -130,7 +130,7 @@ section.article{
 
 section.content{
 	background: #FFF;
-	min-height: 600px;
+
 	min-width: 1000px;
 	margin: 20px auto;
 	box-shadow: 0px 0px 15px #000;
@@ -152,6 +152,11 @@ section.content{
 
 .warning{
 	font-weight: bold;
+}
+
+.progress{
+	height:30px;
+	line-height: 30px;
 }
 
 table.vertical td:first-child{
