Correction et fix bugs divers

--- a/src/DepotVente/BourseBundle/Resources/views/Gestion/tableaudebord.html.twig
+++ b/src/DepotVente/BourseBundle/Resources/views/Gestion/tableaudebord.html.twig
@@ -38,8 +38,8 @@
 				<thead>
 					<tr>
 						<th style="text-align:center" >Valider</th>
-						<th style="text-align:center" >Annuler</th>
-						<th style="text-align:center" >Montant Total</th>
+						<th style="text-align:center" >Articles Déposés</th>
+						<th style="text-align:center" >Articles vendus</th>
 					</tr>
 				</thead>
 				<tbody>
